Project

General

Profile

Actions

Bug #21471

closed

mon osd feature checks for osdmap flags and require-osd-release fail if 0 up osds

Added by Sage Weil over 6 years ago. Updated about 6 years ago.

Status:
Resolved
Priority:
Immediate
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

the various checks test get_up_osd_features() but that returns 0 if no osds are up.

needs to be fixed in luminous and master branch (tho it won't be a straight backport)


Related issues 1 (0 open1 closed)

Copied to RADOS - Backport #21544: luminous: mon osd feature checks for osdmap flags and require-osd-release fail if 0 up osdsResolvedActions
Actions #1

Updated by Brad Hubbard over 6 years ago

  • Assignee set to Brad Hubbard
Actions #2

Updated by Brad Hubbard over 6 years ago

  • Status changed from 12 to In Progress
Actions #3

Updated by Sage Weil over 6 years ago

  • Status changed from In Progress to Pending Backport
Actions #4

Updated by Nathan Cutler over 6 years ago

  • Copied to Backport #21544: luminous: mon osd feature checks for osdmap flags and require-osd-release fail if 0 up osds added
Actions #5

Updated by Brad Hubbard about 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF