mon/OSDMonitor: mon osd feature checks with 0 up osds

get_up_osd_features() returns 0 if no osds are up which causes feature
checks to fail.

Fixes: http://tracker.ceph.com/issues/21471

Signed-off-by: Brad Hubbard <bhubbard@redhat.com>